--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Git & githeb</title>
+        <script type="text/javascript" src="./app.js"></script>
+        <link rel="stylesheet" href="./index.css" type="text/css">
     </head>
     <body>
-        this is git!
-
-        login form;
+        <div class="head">
+            
+        </div>
     </body>
 </html>
